adds angular-animate and animates after user enters username and password.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nfabacus/ecotricity-api-angular1#readme",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
     "angular-ui-router": "^0.3.1",
     "jquery": "^3.1.1"
   }
